# autotiling-swaywm

./: README.md  meson.build
source/: autotiling.c
